// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover Styles should render popover on bottom 1`] = `
.circuit-0 {
  display: inline-block;
}

@media (max-width: 479px) {
  .circuit-1 {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: var(--cui-bg-overlay);
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

@media (max-width: 479px) {
  .circuit-1 {
    visibility: inherit;
    opacity: 1;
  }
}

.circuit-2 {
  pointer-events: all;
}

.circuit-3 {
  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
  padding: 8px 0px;
  border: 1px solid var(--cui-border-subtle);
  box-sizing: border-box;
  border-radius: 8px;
  background-color: var(--cui-bg-normal);
  visibility: hidden;
  opacity: 0;
  opacity: 1;
  visibility: inherit;
}

@media (max-width: 479px) {
  .circuit-3 {
    opacity: 1;
    -webkit-transform: translateY(100%);
    -moz-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width: 479px) {
  .circuit-3 {
    -webkit-transform: translateY(0);
    -moz-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}

.circuit-4 {
  background-color: var(--cui-bg-normal);
  padding: 12px 32px 12px 16px;
  border: 0;
  color: var(--cui-fg-normal);
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5rem;
}

.circuit-4:hover {
  background-color: var(--cui-bg-normal-hovered);
  cursor: pointer;
}

.circuit-4:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px var(--cui-border-focus);
}

.circuit-4:focus::-moz-focus-inner {
  border: 0;
}

.circuit-4:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-4:active {
  background-color: var(--cui-bg-normal-pressed);
}

.circuit-4:disabled,
.circuit-4[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-5 {
  margin-right: 12px;
}

.circuit-6 {
  display: block;
  width: 100%;
  border: 0;
  border-top: 1px solid var(--cui-border-divider);
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

.circuit-7 {
  background-color: var(--cui-bg-normal);
  padding: 12px 32px 12px 16px;
  border: 0;
  color: var(--cui-fg-danger);
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5rem;
}

.circuit-7:hover {
  background-color: var(--cui-bg-normal-hovered);
  cursor: pointer;
}

.circuit-7:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px var(--cui-border-focus);
}

.circuit-7:focus::-moz-focus-inner {
  border: 0;
}

.circuit-7:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-7:active {
  background-color: var(--cui-bg-normal-pressed);
}

.circuit-7:disabled,
.circuit-7[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<body>
  <div>
    <div
      class="circuit-0"
    >
      <button
        aria-controls="popover_20"
        aria-expanded="true"
        aria-haspopup="true"
        id="trigger_19"
      >
        Button
      </button>
    </div>
  </div>
  <div
    class="circuit-1"
    style="z-index: 30;"
  />
  <div
    class="circuit-2"
    style="position: fixed; top: 0px; left: 0px; z-index: 30;"
  >
    <div
      aria-labelledby="trigger_19"
      class="circuit-3"
      id="popover_20"
      role="menu"
    >
      <button
        class="circuit-4"
        data-focus-list="21"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1a10.994 10.994 0 1 0 .012 0H12zm5 12h-4v4a1 1 0 0 1-2 0v-4H7a1 1 0 0 1 0-2h4V7a1 1 0 1 1 2 0v4h4a1 1 0 0 1 0 2z"
            fill="currentColor"
          />
        </svg>
        Add
      </button>
      <hr
        class="circuit-6"
      />
      <button
        class="circuit-7"
        data-focus-list="21"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 3H7a1 1 0 0 1 0-2h10a1 1 0 1 1 0 2zm5 3a1 1 0 0 1-1 1h-1v13a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V7H3a1 1 0 0 1 0-2h18a1 1 0 0 1 1 1zm-11 4a1 1 0 0 0-2 0v8a1 1 0 1 0 2 0v-8zm4 0a1 1 0 0 0-2 0v8a1 1 0 0 0 2 0v-8z"
            fill="currentColor"
          />
        </svg>
        Remove
      </button>
    </div>
  </div>
</body>
`;

exports[`Popover Styles should render popover on left 1`] = `
.circuit-0 {
  display: inline-block;
}

@media (max-width: 479px) {
  .circuit-1 {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: var(--cui-bg-overlay);
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

@media (max-width: 479px) {
  .circuit-1 {
    visibility: inherit;
    opacity: 1;
  }
}

.circuit-2 {
  pointer-events: all;
}

.circuit-3 {
  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
  padding: 8px 0px;
  border: 1px solid var(--cui-border-subtle);
  box-sizing: border-box;
  border-radius: 8px;
  background-color: var(--cui-bg-normal);
  visibility: hidden;
  opacity: 0;
  opacity: 1;
  visibility: inherit;
}

@media (max-width: 479px) {
  .circuit-3 {
    opacity: 1;
    -webkit-transform: translateY(100%);
    -moz-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width: 479px) {
  .circuit-3 {
    -webkit-transform: translateY(0);
    -moz-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}

.circuit-4 {
  background-color: var(--cui-bg-normal);
  padding: 12px 32px 12px 16px;
  border: 0;
  color: var(--cui-fg-normal);
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5rem;
}

.circuit-4:hover {
  background-color: var(--cui-bg-normal-hovered);
  cursor: pointer;
}

.circuit-4:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px var(--cui-border-focus);
}

.circuit-4:focus::-moz-focus-inner {
  border: 0;
}

.circuit-4:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-4:active {
  background-color: var(--cui-bg-normal-pressed);
}

.circuit-4:disabled,
.circuit-4[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-5 {
  margin-right: 12px;
}

.circuit-6 {
  display: block;
  width: 100%;
  border: 0;
  border-top: 1px solid var(--cui-border-divider);
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

.circuit-7 {
  background-color: var(--cui-bg-normal);
  padding: 12px 32px 12px 16px;
  border: 0;
  color: var(--cui-fg-danger);
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5rem;
}

.circuit-7:hover {
  background-color: var(--cui-bg-normal-hovered);
  cursor: pointer;
}

.circuit-7:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px var(--cui-border-focus);
}

.circuit-7:focus::-moz-focus-inner {
  border: 0;
}

.circuit-7:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-7:active {
  background-color: var(--cui-bg-normal-pressed);
}

.circuit-7:disabled,
.circuit-7[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<body>
  <div>
    <div
      class="circuit-0"
    >
      <button
        aria-controls="popover_26"
        aria-expanded="true"
        aria-haspopup="true"
        id="trigger_25"
      >
        Button
      </button>
    </div>
  </div>
  <div
    class="circuit-1"
    style="z-index: 30;"
  />
  <div
    class="circuit-2"
    style="position: fixed; top: 0px; left: 0px; z-index: 30;"
  >
    <div
      aria-labelledby="trigger_25"
      class="circuit-3"
      id="popover_26"
      role="menu"
    >
      <button
        class="circuit-4"
        data-focus-list="27"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1a10.994 10.994 0 1 0 .012 0H12zm5 12h-4v4a1 1 0 0 1-2 0v-4H7a1 1 0 0 1 0-2h4V7a1 1 0 1 1 2 0v4h4a1 1 0 0 1 0 2z"
            fill="currentColor"
          />
        </svg>
        Add
      </button>
      <hr
        class="circuit-6"
      />
      <button
        class="circuit-7"
        data-focus-list="27"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 3H7a1 1 0 0 1 0-2h10a1 1 0 1 1 0 2zm5 3a1 1 0 0 1-1 1h-1v13a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V7H3a1 1 0 0 1 0-2h18a1 1 0 0 1 1 1zm-11 4a1 1 0 0 0-2 0v8a1 1 0 1 0 2 0v-8zm4 0a1 1 0 0 0-2 0v8a1 1 0 0 0 2 0v-8z"
            fill="currentColor"
          />
        </svg>
        Remove
      </button>
    </div>
  </div>
</body>
`;

exports[`Popover Styles should render popover on right 1`] = `
.circuit-0 {
  display: inline-block;
}

@media (max-width: 479px) {
  .circuit-1 {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: var(--cui-bg-overlay);
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

@media (max-width: 479px) {
  .circuit-1 {
    visibility: inherit;
    opacity: 1;
  }
}

.circuit-2 {
  pointer-events: all;
}

.circuit-3 {
  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
  padding: 8px 0px;
  border: 1px solid var(--cui-border-subtle);
  box-sizing: border-box;
  border-radius: 8px;
  background-color: var(--cui-bg-normal);
  visibility: hidden;
  opacity: 0;
  opacity: 1;
  visibility: inherit;
}

@media (max-width: 479px) {
  .circuit-3 {
    opacity: 1;
    -webkit-transform: translateY(100%);
    -moz-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width: 479px) {
  .circuit-3 {
    -webkit-transform: translateY(0);
    -moz-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}

.circuit-4 {
  background-color: var(--cui-bg-normal);
  padding: 12px 32px 12px 16px;
  border: 0;
  color: var(--cui-fg-normal);
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5rem;
}

.circuit-4:hover {
  background-color: var(--cui-bg-normal-hovered);
  cursor: pointer;
}

.circuit-4:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px var(--cui-border-focus);
}

.circuit-4:focus::-moz-focus-inner {
  border: 0;
}

.circuit-4:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-4:active {
  background-color: var(--cui-bg-normal-pressed);
}

.circuit-4:disabled,
.circuit-4[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-5 {
  margin-right: 12px;
}

.circuit-6 {
  display: block;
  width: 100%;
  border: 0;
  border-top: 1px solid var(--cui-border-divider);
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

.circuit-7 {
  background-color: var(--cui-bg-normal);
  padding: 12px 32px 12px 16px;
  border: 0;
  color: var(--cui-fg-danger);
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5rem;
}

.circuit-7:hover {
  background-color: var(--cui-bg-normal-hovered);
  cursor: pointer;
}

.circuit-7:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px var(--cui-border-focus);
}

.circuit-7:focus::-moz-focus-inner {
  border: 0;
}

.circuit-7:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-7:active {
  background-color: var(--cui-bg-normal-pressed);
}

.circuit-7:disabled,
.circuit-7[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<body>
  <div>
    <div
      class="circuit-0"
    >
      <button
        aria-controls="popover_32"
        aria-expanded="true"
        aria-haspopup="true"
        id="trigger_31"
      >
        Button
      </button>
    </div>
  </div>
  <div
    class="circuit-1"
    style="z-index: 30;"
  />
  <div
    class="circuit-2"
    style="position: fixed; top: 0px; left: 0px; z-index: 30;"
  >
    <div
      aria-labelledby="trigger_31"
      class="circuit-3"
      id="popover_32"
      role="menu"
    >
      <button
        class="circuit-4"
        data-focus-list="33"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1a10.994 10.994 0 1 0 .012 0H12zm5 12h-4v4a1 1 0 0 1-2 0v-4H7a1 1 0 0 1 0-2h4V7a1 1 0 1 1 2 0v4h4a1 1 0 0 1 0 2z"
            fill="currentColor"
          />
        </svg>
        Add
      </button>
      <hr
        class="circuit-6"
      />
      <button
        class="circuit-7"
        data-focus-list="33"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 3H7a1 1 0 0 1 0-2h10a1 1 0 1 1 0 2zm5 3a1 1 0 0 1-1 1h-1v13a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V7H3a1 1 0 0 1 0-2h18a1 1 0 0 1 1 1zm-11 4a1 1 0 0 0-2 0v8a1 1 0 1 0 2 0v-8zm4 0a1 1 0 0 0-2 0v8a1 1 0 0 0 2 0v-8z"
            fill="currentColor"
          />
        </svg>
        Remove
      </button>
    </div>
  </div>
</body>
`;

exports[`Popover Styles should render popover on top 1`] = `
.circuit-0 {
  display: inline-block;
}

@media (max-width: 479px) {
  .circuit-1 {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: var(--cui-bg-overlay);
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

@media (max-width: 479px) {
  .circuit-1 {
    visibility: inherit;
    opacity: 1;
  }
}

.circuit-2 {
  pointer-events: all;
}

.circuit-3 {
  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
  padding: 8px 0px;
  border: 1px solid var(--cui-border-subtle);
  box-sizing: border-box;
  border-radius: 8px;
  background-color: var(--cui-bg-normal);
  visibility: hidden;
  opacity: 0;
  opacity: 1;
  visibility: inherit;
}

@media (max-width: 479px) {
  .circuit-3 {
    opacity: 1;
    -webkit-transform: translateY(100%);
    -moz-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width: 479px) {
  .circuit-3 {
    -webkit-transform: translateY(0);
    -moz-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}

.circuit-4 {
  background-color: var(--cui-bg-normal);
  padding: 12px 32px 12px 16px;
  border: 0;
  color: var(--cui-fg-normal);
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5rem;
}

.circuit-4:hover {
  background-color: var(--cui-bg-normal-hovered);
  cursor: pointer;
}

.circuit-4:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px var(--cui-border-focus);
}

.circuit-4:focus::-moz-focus-inner {
  border: 0;
}

.circuit-4:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-4:active {
  background-color: var(--cui-bg-normal-pressed);
}

.circuit-4:disabled,
.circuit-4[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-5 {
  margin-right: 12px;
}

.circuit-6 {
  display: block;
  width: 100%;
  border: 0;
  border-top: 1px solid var(--cui-border-divider);
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

.circuit-7 {
  background-color: var(--cui-bg-normal);
  padding: 12px 32px 12px 16px;
  border: 0;
  color: var(--cui-fg-danger);
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5rem;
}

.circuit-7:hover {
  background-color: var(--cui-bg-normal-hovered);
  cursor: pointer;
}

.circuit-7:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px var(--cui-border-focus);
}

.circuit-7:focus::-moz-focus-inner {
  border: 0;
}

.circuit-7:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-7:active {
  background-color: var(--cui-bg-normal-pressed);
}

.circuit-7:disabled,
.circuit-7[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<body>
  <div>
    <div
      class="circuit-0"
    >
      <button
        aria-controls="popover_14"
        aria-expanded="true"
        aria-haspopup="true"
        id="trigger_13"
      >
        Button
      </button>
    </div>
  </div>
  <div
    class="circuit-1"
    style="z-index: 30;"
  />
  <div
    class="circuit-2"
    style="position: fixed; top: 0px; left: 0px; z-index: 30;"
  >
    <div
      aria-labelledby="trigger_13"
      class="circuit-3"
      id="popover_14"
      role="menu"
    >
      <button
        class="circuit-4"
        data-focus-list="15"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1a10.994 10.994 0 1 0 .012 0H12zm5 12h-4v4a1 1 0 0 1-2 0v-4H7a1 1 0 0 1 0-2h4V7a1 1 0 1 1 2 0v4h4a1 1 0 0 1 0 2z"
            fill="currentColor"
          />
        </svg>
        Add
      </button>
      <hr
        class="circuit-6"
      />
      <button
        class="circuit-7"
        data-focus-list="15"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 3H7a1 1 0 0 1 0-2h10a1 1 0 1 1 0 2zm5 3a1 1 0 0 1-1 1h-1v13a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V7H3a1 1 0 0 1 0-2h18a1 1 0 0 1 1 1zm-11 4a1 1 0 0 0-2 0v8a1 1 0 1 0 2 0v-8zm4 0a1 1 0 0 0-2 0v8a1 1 0 0 0 2 0v-8z"
            fill="currentColor"
          />
        </svg>
        Remove
      </button>
    </div>
  </div>
</body>
`;

exports[`Popover Styles should render with closed styles 1`] = `
.circuit-0 {
  display: inline-block;
}

@media (max-width: 479px) {
  .circuit-1 {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: var(--cui-bg-overlay);
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

.circuit-2 {
  pointer-events: none;
}

.circuit-3 {
  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
  padding: 8px 0px;
  border: 1px solid var(--cui-border-subtle);
  box-sizing: border-box;
  border-radius: 8px;
  background-color: var(--cui-bg-normal);
  visibility: hidden;
  opacity: 0;
}

@media (max-width: 479px) {
  .circuit-3 {
    opacity: 1;
    -webkit-transform: translateY(100%);
    -moz-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

.circuit-4 {
  background-color: var(--cui-bg-normal);
  padding: 12px 32px 12px 16px;
  border: 0;
  color: var(--cui-fg-normal);
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5rem;
}

.circuit-4:hover {
  background-color: var(--cui-bg-normal-hovered);
  cursor: pointer;
}

.circuit-4:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px var(--cui-border-focus);
}

.circuit-4:focus::-moz-focus-inner {
  border: 0;
}

.circuit-4:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-4:active {
  background-color: var(--cui-bg-normal-pressed);
}

.circuit-4:disabled,
.circuit-4[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-5 {
  margin-right: 12px;
}

.circuit-6 {
  display: block;
  width: 100%;
  border: 0;
  border-top: 1px solid var(--cui-border-divider);
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

.circuit-7 {
  background-color: var(--cui-bg-normal);
  padding: 12px 32px 12px 16px;
  border: 0;
  color: var(--cui-fg-danger);
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5rem;
}

.circuit-7:hover {
  background-color: var(--cui-bg-normal-hovered);
  cursor: pointer;
}

.circuit-7:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px var(--cui-border-focus);
}

.circuit-7:focus::-moz-focus-inner {
  border: 0;
}

.circuit-7:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-7:active {
  background-color: var(--cui-bg-normal-pressed);
}

.circuit-7:disabled,
.circuit-7[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<body>
  <div>
    <div
      class="circuit-0"
    >
      <button
        aria-controls="popover_8"
        aria-expanded="false"
        aria-haspopup="true"
        id="trigger_7"
      >
        Button
      </button>
    </div>
  </div>
  <div
    class="circuit-1"
    style="z-index: 30;"
  />
  <div
    class="circuit-2"
    style="position: fixed; top: 0px; left: 0px; z-index: 30;"
  >
    <div
      aria-labelledby="trigger_7"
      class="circuit-3"
      id="popover_8"
      role="menu"
    >
      <button
        class="circuit-4"
        data-focus-list="9"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1a10.994 10.994 0 1 0 .012 0H12zm5 12h-4v4a1 1 0 0 1-2 0v-4H7a1 1 0 0 1 0-2h4V7a1 1 0 1 1 2 0v4h4a1 1 0 0 1 0 2z"
            fill="currentColor"
          />
        </svg>
        Add
      </button>
      <hr
        class="circuit-6"
      />
      <button
        class="circuit-7"
        data-focus-list="9"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 3H7a1 1 0 0 1 0-2h10a1 1 0 1 1 0 2zm5 3a1 1 0 0 1-1 1h-1v13a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V7H3a1 1 0 0 1 0-2h18a1 1 0 0 1 1 1zm-11 4a1 1 0 0 0-2 0v8a1 1 0 1 0 2 0v-8zm4 0a1 1 0 0 0-2 0v8a1 1 0 0 0 2 0v-8z"
            fill="currentColor"
          />
        </svg>
        Remove
      </button>
    </div>
  </div>
</body>
`;

exports[`Popover Styles should render with default styles 1`] = `
.circuit-0 {
  display: inline-block;
}

@media (max-width: 479px) {
  .circuit-1 {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: var(--cui-bg-overlay);
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

@media (max-width: 479px) {
  .circuit-1 {
    visibility: inherit;
    opacity: 1;
  }
}

.circuit-2 {
  pointer-events: all;
}

.circuit-3 {
  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
  padding: 8px 0px;
  border: 1px solid var(--cui-border-subtle);
  box-sizing: border-box;
  border-radius: 8px;
  background-color: var(--cui-bg-normal);
  visibility: hidden;
  opacity: 0;
  opacity: 1;
  visibility: inherit;
}

@media (max-width: 479px) {
  .circuit-3 {
    opacity: 1;
    -webkit-transform: translateY(100%);
    -moz-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width: 479px) {
  .circuit-3 {
    -webkit-transform: translateY(0);
    -moz-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}

.circuit-4 {
  background-color: var(--cui-bg-normal);
  padding: 12px 32px 12px 16px;
  border: 0;
  color: var(--cui-fg-normal);
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5rem;
}

.circuit-4:hover {
  background-color: var(--cui-bg-normal-hovered);
  cursor: pointer;
}

.circuit-4:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px var(--cui-border-focus);
}

.circuit-4:focus::-moz-focus-inner {
  border: 0;
}

.circuit-4:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-4:active {
  background-color: var(--cui-bg-normal-pressed);
}

.circuit-4:disabled,
.circuit-4[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-5 {
  margin-right: 12px;
}

.circuit-6 {
  display: block;
  width: 100%;
  border: 0;
  border-top: 1px solid var(--cui-border-divider);
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

.circuit-7 {
  background-color: var(--cui-bg-normal);
  padding: 12px 32px 12px 16px;
  border: 0;
  color: var(--cui-fg-danger);
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 1rem;
  line-height: 1.5rem;
}

.circuit-7:hover {
  background-color: var(--cui-bg-normal-hovered);
  cursor: pointer;
}

.circuit-7:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px var(--cui-border-focus);
}

.circuit-7:focus::-moz-focus-inner {
  border: 0;
}

.circuit-7:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-7:active {
  background-color: var(--cui-bg-normal-pressed);
}

.circuit-7:disabled,
.circuit-7[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<body>
  <div>
    <div
      class="circuit-0"
    >
      <button
        aria-controls="popover_2"
        aria-expanded="true"
        aria-haspopup="true"
        id="trigger_1"
      >
        Button
      </button>
    </div>
  </div>
  <div
    class="circuit-1"
    style="z-index: 30;"
  />
  <div
    class="circuit-2"
    style="position: fixed; top: 0px; left: 0px; z-index: 30;"
  >
    <div
      aria-labelledby="trigger_1"
      class="circuit-3"
      id="popover_2"
      role="menu"
    >
      <button
        class="circuit-4"
        data-focus-list="3"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1a10.994 10.994 0 1 0 .012 0H12zm5 12h-4v4a1 1 0 0 1-2 0v-4H7a1 1 0 0 1 0-2h4V7a1 1 0 1 1 2 0v4h4a1 1 0 0 1 0 2z"
            fill="currentColor"
          />
        </svg>
        Add
      </button>
      <hr
        class="circuit-6"
      />
      <button
        class="circuit-7"
        data-focus-list="3"
        role="menuitem"
      >
        <svg
          class="circuit-5"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 3H7a1 1 0 0 1 0-2h10a1 1 0 1 1 0 2zm5 3a1 1 0 0 1-1 1h-1v13a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V7H3a1 1 0 0 1 0-2h18a1 1 0 0 1 1 1zm-11 4a1 1 0 0 0-2 0v8a1 1 0 1 0 2 0v-8zm4 0a1 1 0 0 0-2 0v8a1 1 0 0 0 2 0v-8z"
            fill="currentColor"
          />
        </svg>
        Remove
      </button>
    </div>
  </div>
</body>
`;
